syntax = "proto3";

package computrainer;

service Controller {
    rpc GetData(DataRequest) returns (stream ControllerData) {}
    rpc SetLoad(LoadRequest) returns (LoadResponse) {}
}

message DataRequest {

}

message LoadRequest {
    int32 target_load = 1;
}

message LoadResponse {

}

message ControllerData {
    ControlData control_data = 1;
    PerformanceData performance_data = 2;
}

message ControlData {
    enum Button {
        RESET = 0;
        F1 = 1;
        F2 = 2;
        F3 = 3;
        PLUS = 4;
        MINUS = 5;
    }
    repeated Button pressed = 1;
}

message PerformanceData {
    enum Type {
        SPEED = 0;
        POWER = 1;
        CADENCE = 2;
        HEART_RATE = 3;
        CALIBRATION = 4;
    }

    Type type = 1;
    float value = 2;
}